# AgapeNotes

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  index.html  jest.config.js  manifest.json  package-lock.json  package.json  render.yaml  sw.js  vite.config.mjs
js/: apiClient.js  app.js  cryptoVault.js  history.js  models.js  pinAuth.js  reminders.js  state.js  storage.js  theme.js  updater.js
js/components/: categoryTabs.js  dialog.js  modal.js  navigation.js  personCard.js  personDetail.js  pinScreen.js  search.js
js/views/: meView.js  notesView.js  resourcesView.js  scheduleView.js  settingsView.js
server/: Cargo.toml
server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  reminders.rs  routes.rs
styles/: components.css  index.css  modal-extensions.css  schedule.css
tests/: models.test.js  personDetail.noteDelete.test.js  personDetail.notesPreservation.test.js  personDetail.save.test.js  pinScreen.test.js  storage.test.js
tests/helpers/: loadScript.js  localStorageAdapter.js
